--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,10 @@ phases:
       - echo Build completed on `date`
       - mvn -s settings.xml package
 artifacts:
+  artifacts:
   files:
     - target/nextwork-web-project.war
+    - appspec.yml
+    - scripts/**/*
   discard-paths: no
+
