--- a/appspec.yml
+++ b/appspec.yml
@@ -5,15 +5,15 @@ files:
     destination: /usr/share/tomcat/webapps/
 hooks:
   BeforeInstall:
-    - location: scripts/install_dependencies.sh
+    - location: /scripts/install_dependencies.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
+    - location: /scripts/start_server.sh
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: /scripts/stop_server.sh
       timeout: 300
       runas: root
 
