--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,24 +4,30 @@ phases:
   install:
     runtime-versions:
       java: corretto8
+
   pre_build:
     commands:
       - echo Initializing environment
-      - export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain nextwork --domain-owner 078105654471 --region eu-north-1 --query authorizationToken --output text`
+      - export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token \
+          --domain nextwork \
+          --domain-owner 078105654471 \
+          --region eu-north-1 \
+          --query authorizationToken \
+          --output text)
 
   build:
     commands:
-      - echo Build started on `date`
+      - echo Build started on $(date)
       - mvn -s settings.xml compile
+
   post_build:
     commands:
-      - echo Build completed on `date`
+      - echo Build completed on $(date)
       - mvn -s settings.xml package
+
 artifacts:
-  artifacts:
   files:
     - target/nextwork-web-project.war
     - appspec.yml
     - scripts/**/*
   discard-paths: no
-
