--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,12 +8,16 @@ phases:
   pre_build:
     commands:
       - echo Initializing environment
-      - export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token \
-          --domain nextwork \
-          --domain-owner 078105654471 \
-          --region eu-north-1 \
-          --query authorizationToken \
-          --output text)
+      - pre_build:
+  commands:
+    - echo Initializing environment
+    - |
+      export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token \
+        --domain nextwork \
+        --domain-owner 078105654471 \
+        --region eu-north-1 \
+        --query authorizationToken \
+        --output text)
 
   build:
     commands:
